--- a/arch/arm64/configs/lineageos_joan_defconfig
+++ b/arch/arm64/configs/lineageos_joan_defconfig
@@ -3,7 +3,6 @@ CONFIG_LOCALVERSION="-perf"
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 # CONFIG_USELIB is not set
-CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -733,6 +732,7 @@ CONFIG_SECURITY=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SMACK=y
+CONFIG_SECURITY_APPARMOR=y
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_MD4=y
