--- a/arch/arm64/configs/lineageos_joan_defconfig
+++ b/arch/arm64/configs/lineageos_joan_defconfig
@@ -201,6 +201,7 @@ CONFIG_NETFILTER_XT_MATCH_U32=y
 CONFIG_IP_VS=y
 CONFIG_IP_VS_PROTO_TCP=y
 CONFIG_IP_VS_PROTO_UDP=y
+CONFIG_IP_VS_RR=y
 CONFIG_IP_VS_NFCT=y
 CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_IP_NF_IPTABLES=y
